namespace DesignPattern.Strategy;

public class FlyWithWings : IFlyBehavior
{
    public string Fly()
    {
        return "It fly with the wings.";
    }
}
