namespace DesignPattern.Strategy;

/// <summary>
/// 飛行時のふるまい
/// </summary>
public interface IFlyBehavior
{
    /// <summary>
    /// 飛ぶ
    /// </summary>
    string Fly();
}
